manifest/k8s-production/namespaces/core/product/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
spec:
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      volumes:
      - name: env
        secret:
          secretName: env
      containers:
      - name: product
        image: nginx:alpine
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
          requests:
            memory: 10Mi
            cpu: 10m
        ports:
        - containerPort: 80
        volumeMounts:
        - name: env
          mountPath: /config/files
          subPath: .env
