manifest/k8s-production/namespaces/core/product/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: product
spec:
  selector:
    app: product
  ports:
  - port: 8000
    targetPort: 80
