manifest/k8s-production/namespaces/core/product/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product
  labels:
    name: product
spec:
  ingressClassName: nginx
  rules:
  - host: product.jagodevops.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: product
            port: 
              number: 8000
